Source/WebCore/contentextensions/URLFilterParser.cpp
@@ -76,7 +76,7 @@ public:
         return m_parseStatus;
     }
 
-    void atomPatternCharacter(UChar character)
+    void atomPatternCharacter(UChar character, bool)
     {
         if (hasError())
             return;
